fixed canvas ui, fixed connections chat icon

--- a/src/app/pages/connections/connections.page.html
+++ b/src/app/pages/connections/connections.page.html
@@ -54,7 +54,7 @@
             </div>
             <div class="third-section">
               <div class="icons" (click)="startChat(data)">
-                <ion-icon class="chatandmenu" name="-chat"></ion-icon>
+                <ion-icon name="connected-members-chat"></ion-icon>
               </div>
               <div class="icons-menu">
                 <ion-icon class="chatandmenu" expand="full" (click)="presentConnectionMenu(data.UserId,i)"
