--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
@@ -81,7 +81,7 @@
           </ion-button>
         </ion-row>
           <!-- row for business home other -->
-          <ion-row class="header-card-details" *ngIf="userId!=logInfo.UserId">
+          <ion-row class="header-card-details" *ngIf="userId!==logInfo.UserId">
             <!-- Connection request button -->
             <ion-button  
             style="width: 43px;height: 35px;"
