--- a/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.html
+++ b/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.html
@@ -70,9 +70,8 @@
 </ion-content>
 
 
-<ion-row>
-  <ion-col size="7">
-    <ion-buttons>
+
+    <!-- <ion-buttons>
       <ion-button [disabled]="isUploadDisabled || isDisabled || (postLimit == 5)"  shape="round" (click)="captuerMedia($event,appConstants.MEDIA_PICTURE,appConstants.SOURCE_CAMERA)">
         <ion-icon src="assets/icons/screen-wise-icons/Sonar icons/Chat screen camera icon.svg"></ion-icon>
       </ion-button>
@@ -83,9 +82,21 @@
         (click)="captuerMedia($event,appConstants.MEDIA_PICTURE,appConstants.SOURCE_PHOTOLIBRARY)">
         <ion-icon src="assets/icons/screen-wise-icons/Sonar icons/Chat screen gallery icon.svg"></ion-icon>
       </ion-button>
-    </ion-buttons>
-  </ion-col>
-</ion-row>
+    </ion-buttons> -->
+    <div style="display: flex; width: 200px;height: 40px;">
+      <ion-item style="width: 100px;height: 100px;" [disabled]="isUploadDisabled || isDisabled || (postLimit == 5)"  shape="round" (click)="captuerMedia($event,appConstants.MEDIA_PICTURE,appConstants.SOURCE_CAMERA)">
+        <ion-icon src="assets/icons/screen-wise-icons/Sonar icons/Chat screen camera icon.svg"  style="width: 100%;height: 100%;"></ion-icon>
+      </ion-item>
+      <ion-item  style="width: 100px;height: 100px;" *ngIf="videoRecDisable != 11" [disabled]="isUploadDisabled || (postLimit == 5)" shape="round" (click)="captuerMedia($event,appConstants.MEDIA_VIDEO,appConstants.SOURCE_CAMERA)">
+        <ion-icon src="assets/icons/screen-wise-icons/Sonar icons/Chat screen video icon.svg" style="width: 100%;height: 100%;"></ion-icon>
+      </ion-item>
+      <ion-item style="width: 100px;height: 100px;" [disabled]="isUploadDisabled || isDisabled || (postLimit == 5)" shape="round"
+        (click)="captuerMedia($event,appConstants.MEDIA_PICTURE,appConstants.SOURCE_PHOTOLIBRARY)">
+      <ion-icon src="assets/icons/screen-wise-icons/Sonar icons/Chat screen gallery icon.svg" style="width: 100%;height: 100%;"></ion-icon>
+    </ion-item>
+    </div>
+    
+ 
 <ion-row>
   <ion-col size="4" *ngFor="let mediaFile of mediaFiles; let i = index">
     <ion-card>
