--- a/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.scss
+++ b/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.scss
@@ -1,66 +1,66 @@
-ion-row {
+// ion-row {
 
-  &>ion-col {
+//   &>ion-col {
 
-    &>ion-buttons {
-      height: 100%;
+//     &>ion-buttons {
+//       height: 100%;
 
-      &> {
-        --padding-start: 0;
-        --padding-end: 0;
-        --padding-top: 0;
-        --padding-bottom: 0;
-        height: 48px;
-        width: 48px;
+//       &> {
+//         --padding-start: 0;
+//         --padding-end: 0;
+//         --padding-top: 0;
+//         --padding-bottom: 0;
+//         height: 48px;
+//         width: 48px;
 
-        &>ion-icon {
-          font-size: 48px;
-        }
+//         &>ion-icon {
+//           font-size: 48px;
+//         }
 
-      }
-    }
+//       }
+//     }
 
-    &>ion-card {
-      margin: 0;
-      width: 100%;
-      height: 96px;
-      background-color: #EAF1F4;
-      box-shadow: none;
-      border-radius: 11px !important;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+//     &>ion-card {
+//       margin: 0;
+//       width: 100%;
+//       height: 96px;
+//       background-color: #EAF1F4;
+//       box-shadow: none;
+//       border-radius: 11px !important;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
 
-      &>ion-img {
-        transform: scale(1.5);
-      }
+//       &>ion-img {
+//         transform: scale(1.5);
+//       }
 
-      &>ion-buttons {
+//       &>ion-buttons {
 
-        &.remove {
+//         &.remove {
 
 
-          position: absolute;
-          top: 10px;
-          right: 10px;
+//           position: absolute;
+//           top: 10px;
+//           right: 10px;
 
-          &>ion-button {
-            --padding-start: 5px;
-            --padding-end: 5px;
-            --padding-top: 5px;
-            --padding-bottom: 5px;
-            background-color: #FFFFFF;
-            height: 22px;
-            width: 22px;
-          }
+//           &>ion-button {
+//             --padding-start: 5px;
+//             --padding-end: 5px;
+//             --padding-top: 5px;
+//             --padding-bottom: 5px;
+//             background-color: #FFFFFF;
+//             height: 22px;
+//             width: 22px;
+//           }
 
-        }
-      }
+//         }
+//       }
 
-    }
+//     }
 
-  }
-}
+//   }
+// }
 @media screen and (max-width: 1024px) {
   /* Insert your mobile-specific styles here */
   ion-card{
