--- a/src/app/pages/post/add-post/add-post.page.html
+++ b/src/app/pages/post/add-post/add-post.page.html
@@ -227,7 +227,8 @@ background: #EAF1F4 0% 0% no-repeat padding-box;">
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 10px;"
+      gap: 10px;
+      height:110px"
       >
     </app-multiple-media-upload>
 
