fixed popup on video height

--- a/src/app/core/components/post/post-items/post-items.component.html
+++ b/src/app/core/components/post/post-items/post-items.component.html
@@ -82,7 +82,7 @@
           *ngIf="post.PostImages && post.PostImages.length>0">
           <ion-slide *ngFor="let postImage of post.PostImages">
             <ion-card>
-              <span style="top: 70px;" *ngIf="post.BelongsToNodeName" class="fi-freeUser-nameTag">
+              <span *ngIf="post.BelongsToNodeName" class="fi-freeUser-nameTag">
                 {{post.BelongsToNodeName}}
               </span>
               <video class="video" *ngIf="postImage.includes('VIDEO')" [poster]="appConstants.mediaPrefix + postImage"
