fixed ecard ui and icons

--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
@@ -56,7 +56,8 @@
             (click)="presentMenuModalForOther()" 
             expand="block"
             *ngIf="userId != logInfo.UserId">
-            <ion-icon name="dots"></ion-icon>
+            <!-- <ion-icon name="dots"></ion-icon> -->
+             <img src="../../../../assets/icons/canvas/3 dot icon with circle.svg" alt="">
           </ion-button>
         </ion-buttons>
       </div>
@@ -109,7 +110,7 @@
               shape="round" 
               size="small" 
               (click)="startChat()">
-              <ion-icon name="connected-members-chat"></ion-icon>
+              <img src="../../../../assets/icons/canvas/Chat icon without circle.svg" alt="">
             </ion-button>
           </ion-row>
           
