--- a/src/app/pages/sidemenu/e-card/e-card.page.scss
+++ b/src/app/pages/sidemenu/e-card/e-card.page.scss
@@ -61,6 +61,7 @@ ion-content {
           display: flex;
           justify-content: center;
           align-items: center;
+          border: 4px solid #ffffff;
           & > div{
             border:5px solid #FFFFFF;
             border-radius: 50%;
@@ -272,8 +273,8 @@ ion-content{
   ion-list{
     ion-item{
       --background:#E8F7FE;
-      padding-left: 5px;
-      padding-right: 5px;
+      padding-left: 10px;
+      padding-right: 10px;
     }
   }
 }
