fixed ecard ui and icons

--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.html
@@ -110,7 +110,7 @@
               shape="round" 
               size="small" 
               (click)="startChat()">
-              <img src="../../../../assets/icons/canvas/Chat icon without circle.svg" alt="">
+              <img src="assets/icons/canvas/Chat icon without circle.svg" alt="">
             </ion-button>
           </ion-row>
           
