added more processing

--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.html
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.html
@@ -90,3 +90,8 @@
   <button (click)="OnZoom(false)">zoom out</button>
 </div>
 
+<div>
+  <button (click)="cropAndUploadImage()">crop</button>
+  <canvas #canvasElement></canvas>
+</div>
+
