added video crop

--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.html
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.html
@@ -91,7 +91,7 @@
 </div>
 
 <div>
-  <button (click)="cropAndUploadImage()">crop</button>
+  <button (click)="MainCroppingFunction()">crop</button>
   <canvas #canvasElement></canvas>
 </div>
 
