--- a/src/app/pages/post/add-post-test/add-post-test.page.html
+++ b/src/app/pages/post/add-post-test/add-post-test.page.html
@@ -27,4 +27,14 @@
     gap: 10px;"
     >
   </app-multiple-media-upload>
+
+  <ion-button shape="round" expand="block"
+  color="primary" 
+  [disabled]="!(fileToUpload && fileToUpload.length > 0)"
+  (click)="openPreviewForCropper()"
+  style="height: 53px;
+  font: normal normal bold 16px/24px SF Pro Display; letter-spacing: 0.25px; color: #FFFFFF;"
+  >
+  Preview
+</ion-button>
 </ion-content>
