search after enter

--- a/src/app/pages/map/map-search/map-search.component.html
+++ b/src/app/pages/map/map-search/map-search.component.html
@@ -44,7 +44,7 @@
           <form class="search-box input-field" style="height: auto;" action="" *ngIf="searchMode=='N'"
             (submit)="searchMode=='N'?oneTimeSearch():setUsPing()">
             <ion-input class="medbf" placeholder="Keywords" ngDefaultControl [ngModelOptions]="{standalone: true}"
-              [(ngModel)]="keyinfo"></ion-input>
+              [(ngModel)]="keyinfo" (keyup.enter)="triggerSearch()"></ion-input>
           </form>
 
           <ion-buttons *ngIf="keyinfo.length > 0 " slot="end" style="position: absolute;right: 5px;">
@@ -124,6 +124,8 @@
       </ion-button>
     </div> -->
     <div style="padding:20px">
+     
+
       <ion-button *ngIf="searchMode=='N'" class="search-button" expand="full" shape="round" (click)="triggerSearch()">
         Search
       </ion-button>
