--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
@@ -1,5 +1,5 @@
 .flexible-div {
-    background-color: aquamarine;
+    background-color: black;
     position: relative;
     overflow: visible;
   }
