--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -66,9 +66,9 @@
       <ion-icon [name]="selectedTab == 'free-user-canvas' ? 'tab-canvas-blue' : 'tab-canvas-black'"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="connections">
+    <!-- <ion-tab-button tab="connections">
       <ion-icon [name]="selectedTab == 'connections' ? 'tab-connection-blue' : 'tab-connection-black'"></ion-icon>
-    </ion-tab-button>
+    </ion-tab-button> -->
 
     <ion-tab-button tab="inflows">
       <ion-icon [name]="selectedTab == 'inflows' ? 'tab-inflows-blue' : 'tab-inflows-black'"></ion-icon>
