--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
@@ -138,7 +138,7 @@ ion-content {
   .profile-header {
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 100vw;
     overflow: hidden;
   }
 
@@ -177,7 +177,7 @@ ion-content {
 
     .all-in{
       position: absolute;
-      height: 100%;
+      // height: 100%;
     bottom: 0;
     left: 0;
     right: 0;
@@ -210,21 +210,21 @@ ion-content {
   }
   
   .about-section {
-    margin-top: 10px;
+    margin-top: 0px;
     text-align: start; /* Center-align the about section */
     color: white;
-    margin-left: 20px;
+    // margin-left: 20px;
 
   } 
   
-  .about-section ul {
-    margin: 0 0 5px 0;
-    font-size: 16px;
-    font-weight: bold;
-  }
+  // .about-section ul {
+  //   margin: 0 0 5px 0;
+  //   font-size: 16px;
+  //   font-weight: bold;
+  // }
   
   .about-section p {
-    margin: 0;
+    padding:10px;
     font-size: 14px;
     // opacity: 0.8;
     font-weight: bold;
@@ -243,11 +243,13 @@ ion-content {
   }
   .translucent-button {
     display: flex;
-    --background: rgba(255, 255, 255, 0.2); /* Light black background with 30% opacity */
+    // --background: rgba(255, 255, 255, 0.2); /* Light black background with 30% opacity */
+    --background: white;
     --border-color: white;             /* White border */
     --border-width: 1.5px;               /* 2px border */
     --border-style: solid; 
-    color: white;                      /* White text/icon */
+    color: black;                      /* White text/icon */
+    font-weight: bold;
     margin: 0 5px;                     /* Add margin between buttons */
     border-radius: 20px;               /* Make the button rounded */
     background: var(--background);     /* Apply the background */
@@ -256,7 +258,8 @@ ion-content {
 
   .translucent-button2  {
     display: flex;
-    --background: rgba(240, 240, 240, 0.5); /* Light black background with 30% opacity */
+    // --background: rgba(240, 240, 240, 0.5); /* Light black background with 30% opacity */
+    --background: white;
     --border-color: white;             /* White border */
     --border-width: 2.2px; 
     --border-style: solid;
@@ -295,8 +298,8 @@ ion-content {
 
     .connected-members,
     .connected-members-chat {
-      width: 43px;
-      height: 35px;
+      width: 45px;
+      height: 45px;
     }
 
     ion-button {
