--- a/src/app/pages/post/preview-post-test/preview-post-test.page.html
+++ b/src/app/pages/post/preview-post-test/preview-post-test.page.html
@@ -61,4 +61,13 @@
     </ion-buttons>
   </div>
 
+  <ion-button shape="round" expand="block"
+  (click)="addPost()"
+  color="primary" 
+  style="height: 53px;
+  font: normal normal bold 16px/24px SF Pro Display; letter-spacing: 0.25px; color: #FFFFFF;"
+  >
+  Next
+</ion-button>
+
 </ion-content>
