--- a/src/app/pages/post/preview-post/preview-post.component.html
+++ b/src/app/pages/post/preview-post/preview-post.component.html
@@ -91,9 +91,9 @@
 
 <ion-footer class="create-btn">
 
+      <!-- (click)="addPost()" -->
   <ion-button shape="round" expand="block"
     color="primary" 
-    (click)="addPost()"
     style="height: 53px;
     font: normal normal bold 16px/24px SF Pro Display; letter-spacing: 0.25px; color: #FFFFFF;"
     >
