--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
@@ -1,7 +1,7 @@
 ion-content {
-
   & ion-grid {
     background: rgba(234, 241, 244, 0.7);
+    // background: black;
     padding: 12px;
     & ion-row {
       margin: 20px 0;
