--- a/src/app/pages/video-cover-selection/video-cover-selection.page.html
+++ b/src/app/pages/video-cover-selection/video-cover-selection.page.html
@@ -14,7 +14,7 @@
       [height]="pageheight/2"
       (canplay)="onCanPlay($event)"
       >
-        <source type="video/mp4">
+        <source type="video/quicktime">
       </video>
     </div>
     <div class="canvas-container" [ngStyle]="{'width': canvasContianerWidth}">
